apply plugin: 'com.android.application'

android {
    compileSdkVersion 26
    defaultConfig {
        applicationId "com.scorpio.myexpensemanager"
        minSdkVersion 21
        targetSdkVersion 27
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        // used by Room, to test migrations
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation":
                                     "$projectDir/schemas".toString()]
            }
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        targetCompatibility JavaVersion.VERSION_1_8
        sourceCompatibility JavaVersion.VERSION_1_8
    }
    buildToolsVersion '26.0.2'
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.1'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
    // ViewModel and LiveData
    // Java8 support for Lifecycles
    //    implementation "android.arch.lifecycle:common-java8:1.1.0"
    implementation 'android.arch.lifecycle:extensions:1.1.0'
    // alternatively, just ViewModel
    implementation 'android.arch.lifecycle:viewmodel:1.1.0'
    // alternatively, just LiveData
    implementation 'android.arch.lifecycle:livedata:1.1.0'
    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
    // Room (use 1.1.0-alpha1 for latest alpha)
    implementation 'android.arch.persistence.room:runtime:1.0.0'
    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
    // Paging
    //    implementation "android.arch.paging:runtime:1.0.0-alpha5"
    // Test helpers for LiveData
    //    testImplementation "android.arch.core:core-testing:1.1.0"
    // Test helpers for Room
    testImplementation 'android.arch.persistence.room:testing:1.0.0'
    implementation 'com.android.support:appcompat-v7:27.0.2'
    implementation 'com.android.support:cardview-v7:27.0.2'
    implementation 'com.android.support:design:27.0.2'
}
